# calculadora-python

./: .gitignore  README.md  calculadora.py  pyproject.toml
src/calculadora/: calculadora.py
