[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Calculadora"
version = "1.0.0"
dependencies = []

[project.scripts]
calculadora = "calculadora.calculadora:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyproject-appimage]
script = "calculadora"
output = "Calculadora.AppImage"